design: fixed uneven grid

--- a/app/assets/stylesheets/pages/_trip_show.scss
+++ b/app/assets/stylesheets/pages/_trip_show.scss
@@ -35,6 +35,16 @@
   margin-bottom: 30px;
 }
 
+.trip-recommendations {
+  grid-column-start: 2;
+  grid-column-end: 8;
+  grid-row-start: 2;
+  grid-row-end: 11;
+  padding: 8px;
+  background-color: var(--eggshell);
+  border-radius: 5px;
+}
+
 .btn{
   background: #073b4cff;
   border-radius: 28px;
